--- a/public/project/client/views/users/customer/appointment.view.html
+++ b/public/project/client/views/users/customer/appointment.view.html
@@ -1,36 +1,36 @@
-<div class="customBG">
+<div class="customBG" ng-controller="AppointmentBookingController">
     <div class="container">
         <h1 class="page-header">Schedule an Appointment</h1>
-<div class="row">
-    <div class="col-xs-12">
-        <p>Select Preferred Time</p>
+        <div class="row">
+            <div class="col-xs">
+                <p>Select Stylist/Professional</p>
+            </div>
+            <div class="col-xs-9">
+                <select name="professional" class="form-control" ng-model="currentProfessionalJSON">
+                    <option ng-repeat="professional in professionals" value="{{professional}}">
+                        {{professional.username}}
+                    </option>
+                </select>
+            </div>
+            <div class="col-xs-9">
+                <label>Services Offered</label>
+                <select name="service" class="form-control" ng-model="currentService">
+                    <option ng-repeat="service in currentProfessional.services" value="{{service}}">{{service}}</option>
+                </select>
+            </div>
+            <div class="col-xs-12">
+                <p>Select Time</p>
+            </div>
+            <div class="col-xs-6">
+                <select name="appointment" class="form-control" ng-model="currentAppointmentId">
+                    <option ng-repeat="appointment in appointments" value="{{appointment._id}}">{{appointment.time}}
+                    </option>
+                </select>
+            </div>
+        </div>
+        <button class="btn btn-success" type="submit" ng-click="bookAppointment(currentAppointmentId, currentService)">
+            Book Appointment
+        </button>
     </div>
-    <div class="col-xs-6">
-        <select class="form-control">
-            <option> 9:00 - 10:00</option>
-            <option>10:00 - 11:00</option>
-            <option>11:00 - 12:00</option>
-            <option>12:00 - 13:00</option>
-            <option>13:00 - 14:00</option>
-            <option>15:00 - 16:00</option>
-            <option>16:00 - 17:00</option>
-            <option>17:00 - 18:00</option>
-            <option>18:00 - 19:00</option>
-        </select>
-    </div>
-    <div class="col-xs-12">
-        <p>Select Price Range</p>
-    </div>
-    <div class="col-xs-6">
-        <select id="priceRange" class="form-control">
-            <option> $</option>
-            <option>$$</option>
-            <option>$$$</option>
-        </select>
-    </div>
-    </div>
-<button class="btn btn-success" type="submit" >Submit</button>
-<p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-</div>
+    <div ng-if="message" class="alert alert-success">{{message}}</div>
 </div>
