Redirecting customer to checkout page once successfully booked an appointment

--- a/public/project/client/views/users/customer/checkout.view.html
+++ b/public/project/client/views/users/customer/checkout.view.html
@@ -7,7 +7,7 @@
             data-key="pk_Fhlzwtm9SCx6Uxww5fNXX8CUbwwAc"
             data-amount=5000
             data-name="HairLoom"
-            data-description="Hairloom ($50.00)"
+            data-description="Hairloom"
             data-image="">
         </script>
     </div>
